Merged revisions 67834 via svnmerge from svn+ssh://svn.python.org/python/branches/py3k

................
  r67834 | antoine.pitrou | 2008-12-18 00:18:19 +0100 (Thu, 18 Dec 2008) | 10 lines

  Merged revisions 67832 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r67832 | antoine.pitrou | 2008-12-17 23:46:54 +0100 (mer., 17 d?\195?\169c. 2008) | 4 lines

    Issue #2467: gc.DEBUG_STATS reports invalid elapsed times.
    Patch by Neil Schemenauer, very slightly modified.
  ........
................